# mcp-fitness

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.example.yml  mypy.ini  post-phase-0-review.patch  pyproject.toml  ruff.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: architecture.md  roadmap.md
